feat: update fzf colors

--- a/dot_config/zsh/dot_zshrc.tmpl
+++ b/dot_config/zsh/dot_zshrc.tmpl
@@ -96,9 +96,9 @@ eval "$(fzf --zsh)"
 
 # fzf catppuccin theme
 export FZF_DEFAULT_OPTS=" \
---color=bg+:#313244,bg:#1e1e2e,spinner:#f5e0dc,hl:#f38ba8 \
---color=fg:#cdd6f4,header:#f38ba8,info:#cba6f7,pointer:#f5e0dc \
---color=marker:#f5e0dc,fg+:#cdd6f4,prompt:#cba6f7,hl+:#f38ba8"
+--color=bg+:#2c313a,bg:#1e222a,spinner:#c678dd,hl:#61afef \
+--color=fg:#abb2bf,header:#61afef,info:#56b6c2,pointer:#e06c75 \
+--color=marker:#e06c75,fg+:#dcdfe4,prompt:#98c379,hl+:#61afef"
 
 {{- if eq .chezmoi.os "linux" }}
 # >>> mamba initialize >>>
