--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -36,3 +36,6 @@ export ZDOTDIR="$XDG_CONFIG_HOME/zsh"
 
 # colors!
 export MANPAGER="nvim +Man!"
+
+# kube-config
+export KUBECONFIG=$HOME/.kube/main.yaml:$HOME/.kube/demo.yaml
