fix: font kitty 0.36.0

--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -31,7 +31,7 @@ bold_font        auto
 {{ end -}}
 {{ if eq .chezmoi.os "linux" -}}
 font_family      FiraCode Nerd Font
-bold_font        FiraCode Nerd Font Reg
+bold_font        auto
 {{ end -}}
 italic_font      auto
 bold_italic_font auto
