--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -70,3 +70,13 @@ map ctrl+right resize_window wider
 map ctrl+up resize_window taller
 map ctrl+down resize_window shorter
 # END RESIZE PANE
+
+# START REMOTE CONTROL
+allow_remote_control yes
+{{- if eq .chezmoi.os "linux" }}
+listen_on unix:@kitty
+{{- end }}
+{{- if eq .chezmoi.os "darwin" }}
+listen_on unix:/tmp/kitty
+{{- end }}
+# END REMOTE CONTROL
