feat: add uv autocompletion

--- a/dot_config/zsh/dot_zshrc.tmpl
+++ b/dot_config/zsh/dot_zshrc.tmpl
@@ -105,3 +105,6 @@ eval "$(starship init zsh)"
 
 # atuin
 eval "$(atuin init zsh --disable-up-arrow)"
+
+# uv
+eval "$(uv generate-shell-completion zsh)"
