--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -39,3 +39,6 @@ export MANPAGER="nvim +Man!"
 
 # kube-config
 export KUBECONFIG=$HOME/.kube/main.yaml:$HOME/.kube/demo.yaml
+
+# uv
+export UV_LINK_MODE="copy"
