--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -40,5 +40,7 @@ export MANPAGER="nvim +Man!"
 # kube-config
 export KUBECONFIG=$HOME/.kube/main.yaml:$HOME/.kube/demo.yaml
 
+{{- if eq .chezmoi.os "linux" }}
 # uv
 export UV_LINK_MODE="copy"
+{{- end }}
