Add .config/zsh/.zfunctions Update .config/zsh/.zshrc

--- a/dot_config/zsh/dot_zshrc.tmpl
+++ b/dot_config/zsh/dot_zshrc.tmpl
@@ -1,5 +1,6 @@
 # source external files
 [[ -r ${ZDOTDIR:-$HOME}/.zaliases ]] && source ${ZDOTDIR:-$HOME}/.zaliases
+[[ -r ${ZDOTDIR:-$HOME}/.zfunctions ]] && source ${ZDOTDIR:-$HOME}/.zfunctions
 
 # tab autocompletions
 {{- if eq .chezmoi.os "darwin" }}
