--- a/dot_config/zsh/dot_zaliases.tmpl
+++ b/dot_config/zsh/dot_zaliases.tmpl
@@ -8,6 +8,8 @@ fi
 
 alias ssh="kitten ssh"
 alias lf="lfcd"
+alias docker="podman"
+alias sudo="sudo "
 
 # Create alias override commands using 'lsd'
 alias ls='lsd --group-directories-first'
