feat(zsh): docker=podman

--- a/dot_config/zsh/dot_zaliases.tmpl
+++ b/dot_config/zsh/dot_zaliases.tmpl
@@ -8,7 +8,9 @@ fi
 
 alias ssh="kitten ssh"
 alias lf="lfcd"
+{{- if eq .chezmoi.os "linux" }}
 alias docker="podman"
+{{- end }}
 alias sudo="sudo "
 
 # Create alias override commands using 'lsd'
