feat: add vms env

--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -8,6 +8,12 @@ export XDG_DATA_HOME="$HOME/.local/share"
 export XDG_STATE_HOME="$HOME/.local/state"
 export XDG_CACHE_HOME="$HOME/.cache"
 
+# VMs
+{{- if eq .chezmoi.os "linux" }}
+export VBOX_USER_HOME=/data/.vbox.d
+export VAGRANT_HOME=/data/.vagrant.d
+{{- end }}
+
 {{- if eq .chezmoi.os "linux" }}
 export OPENER="xdg-open"
 export GOPATH="/projects/go"
