feat: upd kitty

--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -80,3 +80,8 @@ listen_on unix:@kitty
 listen_on unix:/tmp/kitty
 {{- end }}
 # END REMOTE CONTROL
+
+# BEGIN TAB BAR
+tab_bar_style powerline
+tab_powerline_style slanted
+# END TAB BAR
