--- a/dot_config/zsh/dot_zshrc.tmpl
+++ b/dot_config/zsh/dot_zshrc.tmpl
@@ -84,6 +84,7 @@ repos=(
 	jeffreytse/zsh-vi-mode
 	romkatv/zsh-defer
   Aloxaf/fzf-tab
+  wfxr/forgit
 	zdharma-continuum/fast-syntax-highlighting
   zsh-users/zsh-history-substring-search
 	zsh-users/zsh-autosuggestions
