Update .config/zsh/.zshrc Update .gitconfig Add .gitignore_global

--- a/dot_config/zsh/dot_zshrc.tmpl
+++ b/dot_config/zsh/dot_zshrc.tmpl
@@ -110,3 +110,6 @@ eval "$(atuin init zsh --disable-up-arrow)"
 
 # uv
 eval "$(uv generate-shell-completion zsh)"
+
+# direnv
+eval "$(direnv hook zsh)"
