--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -44,7 +44,7 @@ export ZDOTDIR="$XDG_CONFIG_HOME/zsh"
 export MANPAGER="nvim +Man!"
 
 # kube-config
-export KUBECONFIG=$HOME/.kube/main.yaml:$HOME/.kube/demo.yaml
+export KUBECONFIG=$HOME/.kube/main.yaml
 
 {{- if eq .chezmoi.os "linux" }}
 # uv
