--- a/dot_config/zsh/dot_zaliases.tmpl
+++ b/dot_config/zsh/dot_zaliases.tmpl
@@ -9,6 +9,7 @@ fi
 alias ssh="kitten ssh"
 alias lf="lfcd"
 alias sudo="sudo "
+alias kubectl=kubecolor
 
 # Create alias override commands using 'lsd'
 alias ls='lsd --group-directories-first'
