--- a/dot_config/zsh/dot_zaliases.tmpl
+++ b/dot_config/zsh/dot_zaliases.tmpl
@@ -7,6 +7,7 @@ if command -v bat >/dev/null 2>&1; then
 fi
 
 alias ssh="kitten ssh"
+alias lf="lfcd"
 alias sudo="sudo "
 alias kubectl=kubecolor
 
