--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -26,6 +26,8 @@ export PATH
 export OPENER="open"
 export GOPATH="${HOME}/Projects/go"
 export HOMEBREW_INSTALL_FROM_API=1
+export GOMODCACHE="$HOME/.cache/go-modules"
+export GOCACHE="$HOME/.cache/go-cache"
 
 typeset -U path PATH
 path=($HOME/.local/bin /opt/homebrew/bin /usr/local/bin $GOPATH/bin $path)
