--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -85,3 +85,7 @@ listen_on unix:/tmp/kitty
 tab_bar_style powerline
 tab_powerline_style slanted
 # END TAB BAR
+
+# BEGIN NOTIFICATION
+notify_on_cmd_finish never
+# END NOTIFICATION
