--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -50,3 +50,6 @@ export KUBECONFIG=$HOME/.kube/main.yaml
 # uv
 export UV_LINK_MODE="copy"
 {{- end }}
+
+# rumdl
+export RUMDL_CACHE_DIR="$HOME/.cache/rumdl"
